media query added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my new file</h1>
+    <div class="main">
+        <div class="name"><h1>Computer Networking</h1></div>
+        <div class="content"><p>omputer networking links together computers, information and resources through various hardware. <br>
+             Take a look at the history and types of computer networking and the components involved.
+              <br>One of the first computer networking successes was in 1940,<br>
+               when George Stibitz used a teletype machine (seen above) to send data to a remote complex number calculator.
+              <br> In the late 1950s, the military began using computer networks for a radar system called Semi-Automatic Ground Environment.
+               <br> Then, in 1960, two mainframe computers like the ones pictured above were connected to an online commercial airline reservation system. <br>
+                Leonard Kleinrock, pictured here, was one of the first to develop network systems using data packets in the 1960s. <br>
+                 His Host computer became the first node of the Internet in September 1969, establishing the network on the next page. <br>
+                  Wide Area Networks (WAN) were first developed in 1965. <br>
+                   These telecommunication networks connect across cities, regions and countries. <br>
+                    The Internet is the largest WAN, covering the globe. <br>
+                     Learn how it formed next.Before the Internet, there was the Defense Department's ARPANET, <br>
+                      one of the most influential early computer networks (seen here in a 1969 drawing). <br>
+                      The goal was to link different computers together, both to increase overall computer power <br>
+                       and to decentralize information storage. <br>
+                      Remote login, e-mail and file transfers became available for the first time.
+            </p></div>
+            <div class="image"><img src="image/download.jpg" alt=""></div>
+
+
+    
+    
+    </div>
 </body>
 </html>
